--- a/Happy-Birthday-My-Lovee.html
+++ b/Happy-Birthday-My-Lovee.html
@@ -1460,10 +1460,10 @@
         }
 
         function startTypewriterP7() {
-            const txt = "ーtake care ya, semoga hal-hal baik selalu beriringan denganmu <br><br>teruslah tumbuh, aku akan melihatmu berproses dengan jarak yang paling jauh dan akan selalu menjadi orang yang paling bangga di setiap proses <br><br>semoga Tuhan selalu melindungi senyummu Dan hatimu, aku adalah orang yang selalu senang melihatmu baik-baik saja.👋🏻🕊️🌹🤍🫶🏻";
+            const txt = "ーtake care ya, semoga hal-hal baik selalu beriringan denganmu <br><br>teruslah tumbuh, aku akan melihatmu berproses dengan jarak yang paling jauh dan akan selalu menjadi orang yang paling bangga di setiap prosesmu <br><br>semoga Tuhan selalu melindungi senyummu Dan hatimu, aku adalah orang yang selalu senang melihatmu baik-baik saja.👋🏻🕊️🌹🤍🫶🏻";
             const target = document.getElementById('type-p7');
             target.innerHTML = ""; 
-            let i = 0;
+            let i = 0; 
             
             function type() {
                 if (i < txt.length) {
