--- a/Happy-Birthday-My-Lovee.html
+++ b/Happy-Birthday-My-Lovee.html
@@ -1213,7 +1213,7 @@
                 mCtx.fillStyle = `rgba(255, 255, 255, ${mTextOpacity})`;
                 
                 // Baris 1
-                mCtx.font = `bold ${Math.min(mCanvas.width / 20, 38)}px "Comic Sans MS", cursive`;
+                mCtx.font = `bold ${Math.min(mCanvas.width / 20, 38)}px "Quicksand", cursive`; 
                 mCtx.fillText("HAPPY BIRTHDAY 💖", centerX, centerY - 5);
                 
                 // Baris 2   
