--- a/Happy-Birthday-My-Lovee.html
+++ b/Happy-Birthday-My-Lovee.html
@@ -740,7 +740,7 @@
                         <div class="screw top-l"></div><div class="screw top-r"></div><div class="screw bot-l"></div><div class="screw bot-r"></div>
                         <div class="cassette-label">
                             <p class="font-handwriting font-bold text-blue-900 text-lg leading-tight">Jatuh Suka</p>
-                            <p class="font-handwriting text-pink-600 text-sm">Tulis</p>
+                            <p class="font-handwriting text-pink-600 text-sm">Tulus</p>
                             <div class="cassette-window">
                                 <div class="sprocket"></div>
                                 <div class="sprocket"></div>
@@ -782,7 +782,7 @@
 
             </div>
 
-            <div class="flex space-x-4">
+            <div class="flex space-x-4"> 
                 <button onclick="nextPage(3)" class="btn-back">Back</button>
                 <button onclick="nextPage(5)" class="btn-gradient">Continue 📸</button>
             </div>
@@ -791,11 +791,11 @@
         <div id="page5" class="page-container hidden-page">
             <h2 class="font-big text-3xl mb-4 text-pink-900">Your Beauty</h2>  
             <div class="photo-grid mb-6"> 
-                <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc1.jpeg" alt="Memory 1"></div>
+                <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc5.jpeg" alt="Memory 1"></div>
                 <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(-1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc2.jpeg" alt="Memory 2"></div>
                 <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc3.jpeg" alt="Memory 3"></div>
                 <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(-1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc4.jpeg" alt="Memory 4"></div>
-                <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc5.jpeg" alt="Memory 5"></div>
+                <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc1.jpeg" alt="Memory 5"></div>
                 <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(-1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc6.jpeg" alt="Memory 6"></div>
                 <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc7.jpeg" alt="Memory 7"></div>
                 <div class="photo-card" onclick="this.style.transform='scale(1.05) rotate(-1deg)'; setTimeout(()=>this.style.transform='', 400)"><img src="https://birthdaysx.github.io/Foto3/cc8.jpeg" alt="Memory 8"></div>
