--- a/Birthday-Sayangku.html
+++ b/Birthday-Sayangku.html
@@ -310,7 +310,7 @@
         let cinematicDone = false;  
  
         // PESAN UNTUK DIKETIK
-        const messageToType = "Selamat ulang tahun sayangkuuu, semoga bertambahnya umur kamu, kamu bisa menjadi pribadi yang lebih baik lagi, sehat selalu mental dan fisiknya, dilancarkan rezekinya, di permudahkan segala urusannya";
+        const messageToType = "Selamat ulang tahun sayangkuuu, semoga bertambahnya umur kamu, kamu bisa menjadi pribadi yang lebih baik lagi, sehat selalu mental dan fisiknya, dilancarkan rezekinya, di permudahkan segala urusannya, semoga apa yang di impikan bisa terwujud semua, harapan ku tetap jadi erika yang kadit kenal";
 
         // DAFTAR UCAPAN (WISHES)  
         const wishes = [["HAPPY","BIRTHDAY"],["SEMOGA","PANJANG UMUR"],"SEHAT SELALU",["DIBERIKAN","REZEKI"],["DISEHATKAN","BADAN"],["WISH YOU","ALL THE BEST"],["LOVE YOU","SO MUCH"]];
