--- a/Happy-Birthday-To-You-Sayang.html
+++ b/Happy-Birthday-To-You-Sayang.html
@@ -307,13 +307,13 @@
         let particles = [];
         let lasers = [];
         let isStarted = false;
-        let cinematicDone = false;  
+        let cinematicDone = false;   
  
         // PESAN UNTUK DIKETIK
         const messageToType = "-awooo sayang ! 💓 happy birthday to you sayang ! selamat bertambah usia sayang, aku doakan ayang dilancarkan rezekinya, dipanjangkan umur, selalu sihat, selalu baik hehe you deserve all the good things in this world. semoga tujuan kita berdua cepat tercapai Aamiin. semangat dalam proses ya sayang aku, aku tetap disini mendoakan dan selalu support segala usaha dan proses kamu 🫶🏻 thank you for being such a good man to me, god bless you always. i wish that the world will be more kinder to you ! ILOVEYOUALWAYS SIGIT SAYANG ❤️";
 
         // DAFTAR UCAPAN (WISHES)  
-        const wishes = [["HAPPY","BIRTHDAY"],["SEMOGA","SECCESS"],["SEMANGAT","GANTENG"],["WISH YOU","ALL THE BEST"],["LOVE YOU","ALWAYS"]];
+        const wishes = [["HAPPY","BIRTHDAY"],["SEMOGA","SUCCESS"],["SEMANGAT","GANTENG"],["WISH YOU","ALL THE BEST"],["LOVE YOU","ALWAYS"]];
         let wishIndex = 0;
 
         function resize() {
