--- a/happy_birthday_ade.html
+++ b/happy_birthday_ade.html
@@ -344,7 +344,7 @@
         } 
 
         // Efek Mengetik
-        const text = `        Ditanggal 23 Februari ini hari spesialnya de mas cuma mau ngomong mas bangga punya ade mas bahagia punya ade mau susah duka maupun senang semua mas nikmati bareng ade mas bersyukur banget bisa dikenalkan sama ade mas jadi lebih semangat kerjanya jadi ada yang bisa dimanjain dingambekin hehehe dibuat kesel setiap hari dengan tingkah laku mas tapi semua itu ga lepas dari sayangg nya mas ke ade.
+        const text = `        Ditanggal 23 Februari ini hari spesialnya ade, mas cuma mau ngomong mas bangga punya ade mas bahagia punya ade mau susah duka maupun senang semua mas nikmati bareng ade mas bersyukur banget bisa dikenalkan sama ade mas jadi lebih semangat kerjanya jadi ada yang bisa dimanjain dingambekin hehehe dibuat kesel setiap hari dengan tingkah laku mas tapi semua itu ga lepas dari sayangg nya mas ke ade.
         Adee semoga dibertambahnya usia ade sekarang ade makin tambah dewasa tambah bahagia selalu dikelilingi orang orang baik dan yang paling penting selalu sayngg dan cinta sama mas yaa ade. 
         Mas minta maaf belum bisa hadir disamping ade sekarang tapi mas harap catatan kecil ini dapat menggantikan kehadiran mas dihati ade 🥺. 
         
