--- a/Happy_Birthday_Surprise.html
+++ b/Happy_Birthday_Surprise.html
@@ -256,12 +256,12 @@
   
     <!-- HALAMAN 1 -->
     <div id="page-1" class="page">
-        <h1>Happy Birthday<br>Sayang!</h1>
+        <h1>Happy Birthday!</h1>
         <button id="gift-button" aria-label="Buka Kado">🎁</button>
         <p style="color: #888; margin-top: 30px; letter-spacing: 1px;">Klik kado untuk kejutan</p>
     </div>
 
-    <!-- HALAMAN 2 (FIREWORKS) -->
+    <!-- HALAMAN 2 (FIREWORKS) --> 
     <div id="page-2" class="page hidden">
         <div style="position: fixed; top: 20px; color: rgba(255,255,255,0.7); letter-spacing: 2px; font-size: 14px; animation: pulse 1s infinite alternate; pointer-events: none;">
             ✨ Klik layar untuk Wishes ✨ 
@@ -280,10 +280,10 @@
             <div class="photo-item photo-5"><img src="https://birthdaysx.github.io/Foto3/kk5.jpeg" alt="Momen 5"></div>
         </div>
 
-        <div id="scroll-hint" class="scroll-hint">Scroll kebawah ya sayangg.. 👇</div>  
+        <div id="scroll-hint" class="scroll-hint">Scroll kebawah yaa.. 👇</div>  
  
         <!-- KARTU PESAN -->
-        <div class="message-card" id="message-card">
+        <div class="message-card" id="message-card"> 
             <h2>Happy Birthday<br>Lampang🤍</h2> 
             <p id="typing-text"></p>
             <p style="font-style: italic; margin-top: 15px;">Efraim</p>
