--- a/Happy_Birthday_Surprise.html
+++ b/Happy_Birthday_Surprise.html
@@ -286,8 +286,8 @@
         <div class="message-card" id="message-card"> 
             <h2>Happy Birthday<br>Lampang🤍</h2> 
             <p id="typing-text"></p>
-            <p style="font-style: italic; margin-top: 15px;">Efraim</p>
-            <button class="restart-btn" onclick="location.reload()">Mulai Lagi</button>
+            <p style="font-style: italic; margin-top: 15px;">From Efraim Miracle Rogi</p>
+            <button class="restart-btn" onclick="location.reload()">Mulai Lagi</button> 
         </div> 
     </div> 
 
