--- a/for-your_birthday-my-pookie.html
+++ b/for-your_birthday-my-pookie.html
@@ -459,10 +459,10 @@
            ========================================= */
         let fw_particles = [];
         let fw_lasers = [];
-        let fw_cinematicDone = false;
+        let fw_cinematicDone = false; 
  
         const messageToType = "Happy birthday to my beautiful man, Matt♡\n\n"+"Your presence makes life sweeter\n"+"Im so grateful that you exist in this world 🌷\n\n"+"May you live a long and happy life, smooth and healthy♡\n\n"+"You take my breath away, I can't breathe without you\n\n"+"I love you so much my pookie💗";
-        const wishes = [["HAPPY BIRTHDAY","MY BEAUTIFUL MAN"],["I LOVE","YOU🩵"],["WISH YOU","ALL THE BEST"]]; 
+        const wishes = [["HAPPY BIRTHDAY","MY LOVE"],["SMOOTH","AND HEALTY"],"HAPPIER",["WISH YOU","ALL THE BEST"],["BE MY","FUTURE😋"],["ALWAYS","LOVE ME"]]; 
         let wishIndex = 0;
  
         class SharpParticle {
